--- a/Medical_Insurance_Cost_Prediction.ipynb
+++ b/Medical_Insurance_Cost_Prediction.ipynb
@@ -6,7 +6,7 @@
       "name": "Medical Insurance Cost Prediction.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOKsmINI3lDU7svLR3I/ml5",
+      "authorship_tag": "ABX9TyM0wx6Tbxm7ogI/e7zf20ZV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Importing The Dependencies"
+        "**Importing The Dependencies**"
       ],
       "metadata": {
         "id": "Y2BhCxxm6vuE"
@@ -57,7 +57,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Data Collection & Analysis"
+        "**Data Collection & Analysis**"
       ],
       "metadata": {
         "id": "NQC5lfG1CCls"
